# genesis-oracle

./: .gitignore  README.md  pyproject.toml  run_collective_lab_demo.py  run_collective_lab_validation_demo.py  run_fractal_entropy_demo.py  run_spreeland_dispatcher.py
.licenses/: literature_search_openalex_LICENSE.txt
Notebooks/: ams-ps08-de.ipynb  ams-ps09-en.ipynb  ams-ps11-en.ipynb
cognitive_core/: agent.py
collective_lab_demo/: README.md  __init__.py
collective_lab_validation/: README.md  __init__.py  presentation_alignment.md  presentation_script_5_minutes.md
docs/: ADK_Report.md  Ascension_Report.md  Cerebral_Nexus_Report.md  Fabric_Report.md  Swarm_Stress_Report.md  index.md
fractal_entropy_demo/: README.md  __init__.py
public_data/: simulation_parameters.json
scholar_prime/: agent.py
scripts/: run_parameter_extraction.py
spreeland_dispatcher/: README.md  __init__.py  a2a_negotiation.py  a2ui.py  a2ui_delivery_card.json  agent.py  agui_stream.py  bridge_mcp_server.py  mcp_client.py  payments.py  workflow.py
src/: architecture.py  architecture_conv1d.py  classical_pi.py  data_generator.py  defensive_agent.py  fabric_pinn.py  finetune_run.py  flax_core.py  game_loop.py  generate_signals.py  jax_swarm.py  legacy_swarm.py  list_gemini_models.py  markov_boss.py  monte_carlo.py  oracle_ping.py  oracle_setup.py  pinn_data.py  projectile_grad.py  sandbox_env.py  visual_audit.py
tests/: conftest.py  test_auditor_rejection.py  test_auditor_verification.py  test_collective_validation_gate.py  test_demo_flow.py  test_fractal_demo_flow.py  test_gate.py  (+14 more)
(+76 files in other folders)
