[project]
name = "genesis-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "flax>=0.12.7",
    "google-adk>=2.3.0",
    "google-genai>=2.8.0",
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "kagglehub>=1.0.2",
    "keras>=3.0.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optax>=0.2.8",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
